added middleware
